[iOS] Set a11y label for empty table view message.

Since the reading list empty table message is an NSAttributedString that
contains an embedded image, we need to apply a custom a11y label that
correctly translates the image in the string to text.  This CL adds the
ability to update the empty message text a11y label.

Bug: 868364
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: Icc34396d7a30b5d82e7fd30eb1fd492d71d1e79d
Reviewed-on: https://chromium-review.googlesource.com/1200077
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Reviewed-by: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588656}