ios/chrome/browser/ui/reading_list/reading_list_table_view_controller.mm
@@ -862,6 +862,8 @@ ReadingListSelectionState GetSelectionStateForSelectedCounts(
       addEmptyTableViewWithAttributedMessage:GetReadingListEmptyMessage()
                                        image:[UIImage
                                                  imageNamed:kEmptyStateImage]];
+  [self updateEmptyTableViewMessageAccessibilityLabel:
+            GetReadingListEmptyMessageA11yLabel()];
   self.tableView.alwaysBounceVertical = NO;
   self.tableView.separatorStyle = UITableViewCellSeparatorStyleNone;
   [self.audience readingListHasItems:NO];
