ios/chrome/browser/ui/table_view/chrome_table_view_controller.mm
@@ -133,6 +133,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
                                                        image:image];
 }
 
+- (void)updateEmptyTableViewMessageAccessibilityLabel:(NSString*)newLabel {
+  self.emptyView.messageAccessibilityLabel = newLabel;
+}
+
 - (void)removeEmptyTableView {
   if (self.emptyView) {
     // Check that the tableView.backgroundView hasn't been modified
