ios/chrome/browser/ui/table_view/table_view_empty_view.h
@@ -25,6 +25,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 - (instancetype)initWithCoder:(NSCoder*)aDecoder NS_UNAVAILABLE;
 - (instancetype)initWithFrame:(CGRect)frame NS_UNAVAILABLE;
 
+// The accessibility label to use for the message label.  Default value is the
+// message iteself.
+@property(nonatomic, strong) NSString* messageAccessibilityLabel;
+
 // The empty view's accessibility identifier.
 + (NSString*)accessibilityIdentifier;
 
